@@ -142,7 +142,7 @@
     <value>Cechy:</value>
   </data>
   <data name="PleaseReportAnyBugsToPawełTrokaPtrokaFizykaDk" xml:space="preserve">
-    <value>Proszę zgłaszać wszelkie błędy do Paweł Troka - ptroka@fizyka.dk</value>
+    <value>Proszę zgłaszać wszelkie błędy do Paweł Troka - pawel.troka@outlook.com</value>
   </data>
   <data name="BugReporting" xml:space="preserve">
     <value>Raportowanie błędów</value>
@@ -185,6 +185,7 @@
 - Ponad 21 funkcji i operacji działających na macierzach
 
 - Potężny język skryptowy do prostych obliczeń, uwzględniając macierze
+
 - Możesz zadeklarować własne niestandardowe funkcje z języka skryptowego</value>
   </data>
   <data name="memoryTestBackgroundWorker_RunWorkerCompleted" xml:space="preserve">
@@ -233,7 +234,7 @@
     <value>Niepoprawna składnia</value>
   </data>
   <data name="GUI_numericalOperationButton_Click_Only_Real_mode_is_supported_in_Numerical_calculations_right_now__more_to_come_in_next_versions_" xml:space="preserve">
-    <value>Tylko tryb rzeczywisty jest wsierany w obliczeniach numerycznych na daną chwilę, więcej trybów w kolejnych wersjach!</value>
+    <value>Tylko tryb rzeczywisty jest wspierany w obliczeniach numerycznych na daną chwilę, więcej trybów w kolejnych wersjach!</value>
   </data>
   <data name="GlobalConfig_assemblyDescription_Computator_NET_is_a_special_kind_of_numerical_software_that_is_fast_and_easy_to_use_but_not_worse_than_others_feature_wise_" xml:space="preserve">
     <value>Computator.NET to wyjątkowy program do obliczeń numerycznych, taki który jest szybki i łatwy w użyciu ale nie gorszy niż inne pod względem możliwości.</value>
@@ -309,5 +310,8 @@
   </data>
   <data name="GUI_numericalOperationButton_Click__Check__Real___f_x___mode" xml:space="preserve">
     <value>-Wybierz tryb "Rzeczywisty : f(x)"</value>
+  </data>
+  <data name="GUI_bugReportingToolStripMenuItem_Click_Or_even_better_report_them_on_project_site__using_link_below" xml:space="preserve">
+    <value>Albo nawet lepiej zgłoś je na stronie projektu, używając poniższego linku</value>
   </data>
 </root>
