@@ -1,13 +1,29 @@
 ﻿using System;
 using System.Drawing;
+using System.Globalization;
 using System.Linq;
 using System.Text;
+using System.Threading;
 using System.Windows.Forms;
+using Computator.NET.Config;
+
 // ReSharper disable LocalizableElement
 
 namespace Computator.NET.UI
 {
-    public partial class ScientificNumericUpDown : NumericUpDown
+    public static class DoubleExtensions
+    {
+        public static decimal RoundToSignificantDigits(this decimal d, int digits)
+        {
+            if (d == 0)
+                return 0;
+
+            var scale = (decimal)Math.Pow(10, (double) (Math.Floor( (decimal)Math.Log10(Math.Abs((double)d)) ) + 1.0m));
+            return scale * Math.Round(d / scale, digits);
+        }
+    }
+
+    public partial class ScientificNumericUpDown : NumericUpDown//TODO: make writing in exponent possible, make compatible with NumericalOutputNotation from settings
     {
         private readonly char dotSymbol = '·'; //'⋅'
         private readonly string exponents = "⁰¹²³⁴⁵⁶⁷⁸⁹⁺⁻⁼⁽⁾";
@@ -19,17 +35,27 @@ namespace Computator.NET.UI
             Minimum = decimal.MinValue;
             Maximum = decimal.MaxValue;
             Value = (decimal) 1e-9;
-            ExponentialMode = true;
+            //ExponentialMode = true;
 
 
             Font = new Font("Cambria", 16.2F, GraphicsUnit.Point);
+
+            Font = MathCustomFonts.GetMathFont(Font.Size);
             //GlobalConfig.mathFont;
 
             TextAlign = HorizontalAlignment.Center;
             //this.KeyPress += Control_KeyPress;
+            ValueChanged += (o, e) =>
+            {
+                if (!ExponentialMode)
+                    Increment = (0.3m*Value).RoundToSignificantDigits(1);
+            };
+          //  Culture
         }
 
-        public bool ExponentialMode { get; set; }
+        public bool ExponentialMode => ((double) (Value)).ToString(CultureInfo.InvariantCulture).Contains('E') ||
+                                       ((double) (Value)).ToString(CultureInfo.InvariantCulture).Contains('e');
+
         /*  private void Control_KeyPress(object sender, KeyPressEventArgs e)
         {
             if (e.KeyChar == '*')
@@ -54,6 +80,17 @@ namespace Computator.NET.UI
         {
             if (e.KeyChar == '*' && !Enumerable.Contains(Text, dotSymbol))
                 e.KeyChar = dotSymbol;
+            else if (e.KeyChar == 'E' || e.KeyChar == 'e')
+            {
+               // Text += dotSymbol + "10";
+               // e.Handled = true;
+            }
+           else if (e.KeyChar == ',' || e.KeyChar == '.' || e.KeyChar== Thread.CurrentThread.CurrentCulture.NumberFormat.NumberDecimalSeparator[0] || e.KeyChar == Thread.CurrentThread.CurrentUICulture.NumberFormat.NumberDecimalSeparator[0])
+            {
+                e.KeyChar = '.';
+               // //Text += '.';
+               // //e.Handled = true;
+            }
             else
                 base.OnTextBoxKeyPress(source, e);
         }
@@ -62,18 +99,24 @@ namespace Computator.NET.UI
         {
             try
             {
-                var parts1 = Text.Split(dotSymbol);
-                if (parts1.Length == 2)
+                if (Text.Contains('E') || Text.Contains('e'))
                 {
-                    if (Enumerable.Any(parts1[1], c => Enumerable.Contains(exponents, c)))
-                        Value = (decimal) (double.Parse(parts1[0])*covertFromScientificToValue(parts1[1]));
-                    else
-                        Value = (decimal) (double.Parse(parts1[0])*double.Parse(parts1[1]));
+                    Value = CovertFromEngineeringToValue(Text);
                 }
-                else if (parts1.Length == 1 && Enumerable.Any(parts1[0], c => Enumerable.Contains(exponents, c)))
+                else
                 {
-                    var convertedValue = covertFromScientificToValue(parts1[0]);
-                    Value = (decimal) (convertedValue);
+                    var parts1 = Text.Split(dotSymbol);
+                    if (parts1.Length == 2)
+                    {
+                        if (Enumerable.Any(parts1[1], c => Enumerable.Contains(exponents, c)))
+                            Value =  (decimal.Parse(parts1[0], CultureInfo.InvariantCulture) *CovertFromScientificToValue(parts1[1]));
+                        else
+                            Value = (decimal.Parse(parts1[0], CultureInfo.InvariantCulture) * decimal.Parse(parts1[1], CultureInfo.InvariantCulture));
+                    }
+                    else if (parts1.Length == 1 && Enumerable.Any(parts1[0], c => Enumerable.Contains(exponents, c)))
+                    {
+                        Value = CovertFromScientificToValue(parts1[0]);
+                    }
                 }
             }
             catch (Exception ex)
@@ -86,7 +129,10 @@ namespace Computator.NET.UI
         public override void UpButton()
         {
             if (!ExponentialMode)
+            {
                 base.UpButton();
+                Value = Value.RoundToSignificantDigits(2);//beware it's kind of experimental, 1 instead of two would give generally better results but wight have stopped progres in some cases like 0.001
+            }
             else
             {
                 if (Value*10 <= Maximum)
@@ -100,7 +146,10 @@ namespace Computator.NET.UI
         public override void DownButton()
         {
             if (!ExponentialMode)
+            {
                 base.DownButton();
+                Value = Value.RoundToSignificantDigits(2);//beware it's kind of experimental, 1 instead of two would give generally better results but wight have stopped progres in some cases like 0.001
+            }
             else
             {
                 if (Value/10 >= Minimum)
@@ -118,23 +167,24 @@ namespace Computator.NET.UI
 
         protected override void UpdateEditText()
         {
-            if ((Math.Abs(Value) < 10000 && (double) Math.Abs(Value) >= 0.001) || Value == 0)
-                Text = Value.ToString();
+            //var str = ((double) Value).ToString(CultureInfo.InvariantCulture);
+            if (!ExponentialMode)
+                Text = Value.ToString(CultureInfo.InvariantCulture);
             else
             {
-                var parts = Value.ToString("E").Split('E');
+                var parts = Value.ToString("E",CultureInfo.InvariantCulture).Split('E');
 
-                var significand = double.Parse(parts[0]);
-                var exponent = double.Parse(parts[1]);
+                var significand = decimal.Parse(parts[0], CultureInfo.InvariantCulture);
+                var exponent = decimal.Parse(parts[1], CultureInfo.InvariantCulture);
 
-                if (significand != 1.0)
-                    Text = significand.ToString() + dotSymbol + "10" + covertToExponent(exponent.ToString());
+                if (significand != 1.0m)
+                    Text = significand.ToString(CultureInfo.InvariantCulture) + dotSymbol + "10" + CovertToExponent(exponent.ToString(CultureInfo.InvariantCulture));
                 else
-                    Text = "10" + covertToExponent(exponent.ToString());
+                    Text = "10" + CovertToExponent(exponent.ToString(CultureInfo.InvariantCulture));
             }
         }
 
-        private string covertToExponent(string v)
+        private string CovertToExponent(string v)
         {
             var sb = new StringBuilder(v);
 
@@ -145,13 +195,13 @@ namespace Computator.NET.UI
             return sb.ToString();
         }
 
-        private double covertFromScientificToValue(string v)
+        private decimal CovertFromScientificToValue(string v)
         {
             var sb = new StringBuilder(v);
 
             if (sb[0] == '1' && sb[1] == '0')
             {
-                sb[1] = 'e';
+                sb[1] = 'E';
             }
 
             for (var i = 0; i < sb.Length; i++)
@@ -159,7 +209,13 @@ namespace Computator.NET.UI
                     if (sb[i] == exponents[j])
                         sb[i] = toReplace[j];
 
-            return double.Parse(sb.ToString());
+            return (decimal)double.Parse(sb.ToString(), CultureInfo.InvariantCulture);
+        }
+
+
+        private decimal CovertFromEngineeringToValue(string v)
+        {
+            return (decimal)double.Parse(v, CultureInfo.InvariantCulture);
         }
     }
 }
