@@ -18,7 +18,7 @@ namespace Computator.NET
             labelCopyright.Text = AssemblyCopyright;
             labelCompanyName.Text = AssemblyCompany;
             textBoxDescription.Text =
-                $"{Strings.GlobalConfig_assemblyDescription_Computator_NET_is_a_special_kind_of_numerical_software_that_is_fast_and_easy_to_use_but_not_worse_than_others_feature_wise_}{Environment.NewLine}{Strings.ItSFeaturesInclude}{Environment.NewLine}{Strings.featuresInclude}";
+                $"{Strings.GlobalConfig_assemblyDescription_Computator_NET_is_a_special_kind_of_numerical_software_that_is_fast_and_easy_to_use_but_not_worse_than_others_feature_wise_}{Environment.NewLine}{Environment.NewLine}{Strings.ItSFeaturesInclude}{Environment.NewLine}{Strings.featuresInclude}";
         }
 
         #region Assembly Attribute Accessors
